# pawlogger

./: .gitignore  LICENSE  README.md  pyproject.toml
loggingdecorators/: __init__.py  decorators.py  on_new_dec_312.py  on_new_dec_38.py
loggingdecorators/future/: on_new_dec_312.py
src/loggingdecorators/: __init__.py  consts_formats.py  decorators.py
src/pawlogger/: __init__.py  config.py  config_loguru.py  config_loguru2.py  consts.py  logger_config.py
src/pawlogger/loggingdecorators/: consts_formats.py  decorators.py  legacy.py
src/pawlogger/tests/loggingdecorators/: conftest.py  test_on_call.py  test_on_class.py  test_on_init.py
src/pawlogger/tests/pawlogger/: test_l_config.py
tests/: conftest.py  test_on_call.py  test_on_init.py  test_on_new.py  test_unified.py
tests/loggingdecorators/: conftest.py  test_cmc.py  test_on_call.py  test_on_class.py  test_on_init.py  test_on_new.py
tests/pawlogger/: logger_factory.py  test_l_config.py
