[project]
name = "loggingdecorators"
version = "0.1.4"
description = "forked by pawrequest to add on_new and tests"
authors = [
    { name = "Adam Tuft", email = "adam.s.tuft@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.3",
]

[tool.hatch.metadata]
allow-direct-references = true
