[project]
name = "pawlogger"
version = "0.0.0"
description = "pawrequests logging tools"
authors = [
    { name = "Paw", email = "pawrequest@github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest",
]

[tool.hatch.metadata]
allow-direct-references = true
